--- a/front/homework_report.html
+++ b/front/homework_report.html
@@ -45,7 +45,7 @@
     <div class="container-fluid">
       <div class="div_body">
         <h3>HomeWork 1</h3>
-        <p>平均成績 : 63.8 分</p>
+        <p>平均成績 : <span id="sp_average">63.8</span> 分</p>
         <div id="container" style="min-width:400px;height:400px"></div>
         <table class="table table-hover table-bordered">
             <thead>
@@ -56,10 +56,10 @@
                 <th scope="col">分數</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody_shw">
                 <tr>
                     <th scope="row">1</th>
-                    <td><a href="homework_personal.html">學生 1</a></td>
+                    <td><a href="homework_personal.html?member_id=1&course_id=1">學生 1</a></td>
                     <td class="text-warning">遲交</td>
                     <td>68</td>
                 </tr>
@@ -98,6 +98,128 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script>
+    // 取得get
+    var hw_id = getParameter("hw_id");
+    console.log(hw_id);
+
+    function getParameter(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+
+
+
+
+    // 圖表資料
+    var people = new Array(0,0,0,0,0,0,0,0,0,0);
+    var sum = 0;
+    var count = 0;
+    var average = 0;
+
+    // 測試用
+    // var people = new Array(1,0,3,5,8,7,6,1,2,5);
+    // var sum = 866;
+    // var count = 12;
+    // var average = sum/count;
+    // $('#sp_average').text(average.toFixed(2));
+
+    function calculate(f){
+
+        sum += f;
+        count++;
+
+        if(f >= 0 && f <= 10){
+            people[0]++;
+        }
+        else if(f > 10 && f <= 20){
+            people[1]++;
+        }
+        else if(f > 20 && f <= 30){
+            people[2]++;
+        }
+        else if(f > 30 && f <= 40){
+            people[3]++;
+        }
+        else if(f > 40 && f <= 50){
+            people[4]++;
+        }
+        else if(f > 50 && f <= 60){
+            people[5]++;
+        }
+        else if(f > 60 && f <= 70){
+            people[6]++;
+        }
+        else if(f > 70 && f <= 80){
+            people[7]++;
+        }
+        else if(f > 80 && f <= 90){
+            people[8]++;
+        }
+        else if(f > 90 && f <= 100){
+            people[9]++;
+        }
+
+    }
+
+
+
+    // 顯示作業資訊
+    $.ajax({
+        url: "http://127.0.0.1:8080/SE_final/api/login",
+        data: {
+            'hw_id': hw_id
+        },
+        type:"POST",
+        dataType:'json',
+
+        success: function(JData){
+            console.log('成功');
+            console.log(JData);
+
+            $("#tbody_shw").empty();
+            var i = 0;
+            $.each(JData, function() {
+              
+              calculate(JData.shw_fraction);
+
+              $("#tbody_shw").append("<tr><th scope=\"row\">1</th><td><a href=\"homework_personal?member_id="+ JData.member_id +"&course_id="+ hw_id +".html\">"+ JData.member_name +"</a></td><td class=\"text-warning\">"+ JData.shw_status +"</td><td>"+ JData.shw_fraction +"</td></tr>");
+              i++;
+            });
+
+            average = sum/count;
+            $('#sp_average').text(average.toFixed(2));
+        },
+
+        error: function(xhr, ajaxOptions, thrownError){
+            console.log('失敗');
+            console.log(xhr.responseText);
+            console.log(xhr.status);
+            console.log(thrownError);
+        }
+    });
+
+
+
+
+
+
+
+
+    </script>
+
+
+
 
     <!-- Highcharts -->
     <script src="http://code.highcharts.com/highcharts.js"></script>
@@ -150,7 +272,8 @@
             },
             series: [{
                 name: '人數',
-                data: [1, 0, 2, 1, 2, 3, 4, 6, 3, 2]
+                data: people
+                // data: [1, 0, 2, 1, 2, 3, 4, 6, 3, 2]
             }]
         });
     });
