Changes to Student Management

--- a/front/StudentManagement.html
+++ b/front/StudentManagement.html
@@ -101,7 +101,7 @@
         url: "http://127.0.0.1:8080/SE_final/api/class",
         data: {
           'member_id': 1,
-          'list_type': 'admin'
+          'role': 'admin'
         },
         type:"POST",
         dataType:'json',
