--- a/front/HomeworkManagement.html
+++ b/front/HomeworkManagement.html
@@ -96,7 +96,7 @@
         url: "http://127.0.0.1:8080/SE_final/api/class",
         data: {
           'member_id': user.id,
-          'list_type': user.role
+          'role': user.role
         },
         type:"POST",
         dataType:'json',
