--- a/front/homework_audit.html
+++ b/front/homework_audit.html
@@ -39,7 +39,7 @@
     </header>
     <div class="container-fluid">
       <div class="div_body">
-        <h3>作業 1</h3>
+        <h3 id="hwName">作業 1</h3>
         <form action="">
         <table class="table table-hover table-bordered">
             <thead>
@@ -50,6 +50,7 @@
                 <th scope="col">繳交狀態</th>
                 <th scope="col">分數</th>
                 <th scope="col">評語</th>
+                <th scope="col">下載</th>
                 <th scope="col">操作</th>
                 </tr>
             </thead>
@@ -61,42 +62,7 @@
                     <td class="text-warning">遲交</td>
                     <td>68</td>
                     <td></td>
-                    <td><a class="btn btn-info" href="homework_scoring.html?shw_id=1">編輯</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>學生 2</td>
-                    <td>2017/10/19 16:20:00</td>
-                    <td class="text-success">已上傳</td>
-                    <td>85</td>
-                    <td></td>
-                    <td><a class="btn btn-info" href="homework_scoring.html?shw_id=2">編輯</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>學生 3</td>
-                    <td>2017/10/19 16:20:00</td>
-                    <td class="text-success">已上傳</td>
-                    <td>76</td>
-                    <td>部分不符合題目需求</td>
-                    <td><a class="btn btn-info" href="homework_scoring.html?shw_id=3">編輯</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>學生 4</td>
-                    <td></td>
-                    <td class="text-danger">未上傳</td>
-                    <td>0</td>
-                    <td></td>
-                    <td><a class="btn btn-info" href="homework_scoring.html?shw_id=1">編輯</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                    <td>學生 5</td>
-                    <td>2017/10/19 16:20:00</td>
-                    <td class="text-success">已上傳</td>
-                    <td>90</td>
-                    <td></td>
+                    <td><a class="btn btn-info" href="http://127.0.0.1:8080/SE_final/api/download/1">下載</a></td>
                     <td><a class="btn btn-info" href="homework_scoring.html?shw_id=1">編輯</a></td>
                 </tr>
             </tbody>
@@ -118,27 +84,39 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/params.js"></script>
+    <script src="js/dateFormatter.js"></script>
 
     <script>
-    // 取得get
-    var hw_id = getParameter("hw_id");
-    console.log(hw_id);
-
-    function getParameter(name, url) {
-        if (!url) url = window.location.href;
-        name = name.replace(/[\[\]]/g, "\\$&");
-        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-            results = regex.exec(url);
-        if (!results) return null;
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
 
 
+    console.log(urlParams.hw_id[0]);
+    var hw_id = urlParams.hw_id[0];
+    $.ajax({
+        url: "http://127.0.0.1:8080/SE_final/api/unitHwContent",
+        data: {
+            'hwId': hw_id
+        },
+        type:"POST",
+        dataType:'json',
+
+        success: function(JData){
+            console.log('成功');
+            console.log(JData);
+            $('#hwName').html(JData.hw_name);
+        },
+
+        error: function(xhr, ajaxOptions, thrownError){
+            console.log('失敗');
+            console.log(xhr.responseText);
+            console.log(xhr.status);
+            console.log(thrownError);
+        }
+    });
 
     // 顯示作業資訊
     $.ajax({
-        url: "http://127.0.0.1:8080/SE_final/api/login",
+        url: "http://127.0.0.1:8080/SE_final/api/hwAllDetail",
         data: {
             'hw_id': hw_id
         },
@@ -149,10 +127,36 @@
             console.log('成功');
             console.log(JData);
 
+            JData.sort(function(a,b){return a.studentName.localeCompare(b.studentName)});
+
             $("#tbody_shw").empty();
             var i = 0;
             $.each(JData, function() {
-              $("#tbody_shw").append("<th scope=\"row\">3</th><td>"+ JData[i].member_name +"</td><td>"+ JData[i].shw_time +"</td><td class=\"text-success\">"+ JData[i].shw_status +"</td><td>"+ JData[i].shw_fraction +"</td><td>"+ JData[i].shw_comment +"</td><td><a class=\"btn btn-info\" href=\"homework_scoring.html?shw_id="+ JData[i].shw_id +"\">編輯</a></td>");
+              if(JData[i].shw_status=='未繳交'){
+                $("#tbody_shw").append("\
+                    <tr>\
+                        <th scope='row'>"+(i+1)+"</th>\
+                        <td>"+JData[i].studentName+"</td>\
+                        <td>N/A</td>\
+                        <td class='text-danger'>"+JData[i].shw_status+"</td>\
+                        <td>N/A</td>\
+                        <td>N/A</td>\
+                        <td></td>\
+                        <td></td>\
+                    </tr>");
+              }else{
+                $("#tbody_shw").append("\
+                    <tr>\
+                        <th scope='row'>"+(i+1)+"</th>\
+                        <td>"+JData[i].studentName+"</td>\
+                        <td>"+dateFormatter(JData[i].shw_time)+"</td>\
+                        <td class='text-success'>"+JData[i].shw_status+"</td>\
+                        <td>"+JData[i].shw_fraction+"</td>\
+                        <td>"+JData[i].shw_comment+"</td>\
+                        <td><a class='btn btn-info' href='http://127.0.0.1:8080/SE_final/api/download/"+JData[i].file_id+"'>下載</a></td>\
+                        <td><a class='btn btn-info' href='homework_scoring.html?hw_id="+hw_id+"&user_id="+JData[i].user_id+"'>編輯</a></td>\
+                    </tr>");
+              }
               i++;
             });
         },
